refactor: remove sensitive token from env example
